V3 of Main code
New import of .kml files functionality

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .DS_Store
 /output_recorder
 /__pycache__
+output_ATTITUDE_DATA_20250418-115327.csv
+output_GPS_DATA_20250418-115327.csv
+
+output_TRAFFIC_DATA_20250418-115327.csv
